--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch",
+    "test": "jest -c test/jest.config.js",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -25,23 +25,32 @@
     "@storybook/addon-interactions": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/jest": "^0.0.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/testing-react": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.7",
+    "@types/jest-axe": "^3.5.4",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@vanilla-extract/css": "^1.7.2",
     "@vanilla-extract/webpack-plugin": "^2.1.11",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "eslint-plugin-storybook": "^0.6.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
+    "jest-axe": "^6.0.0",
     "jest-environment-jsdom": "^28.1.3",
+    "jest-extended": "^3.0.2",
     "mini-css-extract-plugin": "^2.6.1",
+    "ts-jest": "^28.0.8",
     "typescript": "4.7.4"
   }
 }
